--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,22 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "darkaonline/l5-swagger": "^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
         "laravel/framework": "^8.54",
+        "laravel/passport": "^10.1",
+        "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "maatwebsite/excel": "^3.1",
         "proengsoft/laravel-jsvalidation": "^4.5",
+        "pusher/pusher-php-server": "^7.0",
+        "spatie/laravel-permission": "^5.1",
+        "spatie/laravel-server-side-rendering": "^1.4",
+        "stripe/stripe-php": "^7.113",
         "yajra/laravel-datatables-oracle": "^9.18"
     },
     "require-dev": {
